--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "with-redux-toolkit",
   "version": "1.0.0",
   "scripts": {
-    "dev": "next",
+    "dev": "NODE_OPTIONS=--openssl-legacy-provider next",
     "build": "next build",
     "start": "next start"
   },
@@ -23,3 +23,4 @@
     "tailwindcss": "^2.1.2"
   }
 }
+
